--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
                     <p align="justify">入口：
                         <script>
                             var va1 = localStorage.value1
-                            document.write(va1)
+                            document.write(崇山校区东南门人行通道)
                         </script>
-                崇山校区东南门人行通道</p>
+                
               </div>
           </div>
             <div class="weui-cell  weui-cell_example">
@@ -39,9 +39,9 @@
                     <p>手机号：
                         <script>
                             var va2 = localStorage.value2
-                            document.write(va2)
+                            document.write(13180310615)
                         </script>
-                    13180310615</p>
+                    
               </div>
           </div>
             <div class="weui-cell  weui-cell_example">
