--- a/freedom.html
+++ b/freedom.html
@@ -77,7 +77,7 @@
                   <p>入         口：
                         <script>
                             var va6 = localStorage.value6
-                            document.write(va6)
+                            document.write(崇山校区东南门人行通道)
                         </script>
                     </p>
                 </div>
