--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
               <div class="weui-cell__bd">
                     <p align="justify">入口：
                         <script>
-                            var va1 = localStorage.value1
-                            document.write(崇山校区东南门人行通道)
+                            document.write("崇山校区东南门人行通道")
                         </script>
                 
               </div>
