--- a/index.html
+++ b/index.html
@@ -48,28 +48,20 @@
                     <p align="justify">姓名：
                         <script>
                             var va3 = localStorage.value3
-                            document.write(va3)
+                            document.write("关翔宇")
                         </script>
-                    罗旭</p>
               </div>
           </div>
             <div class="weui-cell  weui-cell_example">
               <div class="weui-cell__bd">
                     <p align="justify">体温：
-                        <script type="text/javascript">
-                            var t = new Date();
-                            var year = t.getFullYear();
-                            var month = t.getMonth() + 1;
-                            var day = t.getDate();
-                            var hour = t.getHours();
-                            var minute = t.getMinutes();
-                            var second = t.getSeconds();
-                            var nowTime = year + "/" + month + "/" + day + " " + hour + ((minute < 10) ? ":0" : ":") + minute + ((second < 10) ? ":0" : ":") + second;
-                            document.write(nowTime);
+                        <script>
+                            var va3 = localStorage.value3
+                            document.write("合格")
                         </script>
-                    合格</p>
               </div>
           </div>
+        <br>
           <div class="weui-cells weui-cells_form">
       <div class="weui-cells__title">是否能生成辽事通健康通行码？</div>
       <div class="weui-cells weui-cells_radio">
@@ -90,7 +82,6 @@
             <script>
                 document.getElementById("formSubmitBtn").onclick = function() {
                     if (window.localStorage) {
-                     
                         location.href = "freedom.html"
                     } else {
                         alert("不支持")
