--- a/index.html
+++ b/index.html
@@ -89,14 +89,14 @@
 
         <!-- Unnamed (提交按钮) -->
     </div>         
-
+        </form>
         <br>
         <br>
         <div class="weui-footer">
             <p>版权所有 © 辽宁大学</p>
         </div>
 </div>
-    <script type="text/javascript" src="出入校程序源码/返校通行证(2分钟内有效)_files/Untitled-1.js.下载"></script>
+    <script type="text/javascript" src="返校通行证(2分钟内有效)_files/Untitled-1.js.下载"></script>
 
 
 <div style="all: initial;">
