--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                         </script>
               </div>
           </div>
-        <br>
+		
           <div class="weui-cells weui-cells_form">
       <div class="weui-cells__title">是否能生成辽事通健康通行码？</div>
       <div class="weui-cells weui-cells_radio">
@@ -74,6 +74,9 @@
           <input type="radio" name="fyzz"  class="weui-check" value="发热" id="r9"    onclick="document.getElementById('fyzzxx').removeAttribute('required');document.getElementById('fyzzxxdiv').classList.remove('weui-cell_warn');document.getElementById('fyzzxx').value=''">
           <span class="weui-icon-checked"></span> </div>
         </label>
+	      </div>
+                </div>
+            </div>
 		<div class="weui-btn-area" > <a id="formSubmitBtn" href="javascript:" class="weui-btn weui-btn_primary">提 交</a> </div>
             
             <script>
